--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
-.st0{fill-rule:evenodd;clip-rule:evenodd;fill:#323232;}
+.svg_logo{
+	max-width: 20px;
+	max-height: 70px;
+}
+.st0{
+	fill-rule:evenodd;clip-rule:evenodd;fill:#323232;}
 .st1{fill-rule:evenodd;clip-rule:evenodd;fill:#F0D247;stroke:#F0D247;stroke-width:3;stroke-miterlimit:10;}
 .st1 {
 	stroke-dasharray: 2000;
@@ -29,5 +34,38 @@
 	}
 }
 body{
-  background:#fff;
+	background:#fefefe;
+	color:#323232;
+	font-family: 'Fira Sans Extra Condensed', sans-serif;
+}
+.about{
+	background-color: #fefefe;
+}
+.carousel-item{
+	max-height: 700px;
+}
+.garanty-img{
+	width: 80px;
+	width: 80px;
+}
+.garanty{
+	align-items: center;
+	text-align: center;
+}
+.elictro{
+	margin-top: 5%;
+	font-size: 48px;
+	font-weight: 500;
+}
+.slider-diskr{
+	background-color: #F0D247;
+	color:#323232;
+}
+.garanty{
+	padding: 20px 20px 20px 20px;
+	border-radius: 50px;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.garanty-discr{
+	margin-top: 30px;
 }
