--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 .svg_logo{
 	max-width: 20px;
 	max-height: 70px;
@@ -37,6 +38,9 @@ body{
 	background:#fefefe;
 	color:#323232;
 	font-family: 'Fira Sans Extra Condensed', sans-serif;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 .about{
 	background-color: #fefefe;
@@ -46,7 +50,7 @@ body{
 }
 .garanty-img{
 	width: 80px;
-	width: 80px;
+	height: 80px;
 }
 .garanty{
 	align-items: center;
@@ -61,17 +65,23 @@ body{
 	background-color: #F0D247;
 	color:#323232;
 }
-.garanty{
-	max-width: 350px;
-	padding: 20px 20px 20px 20px;
-	border-radius: 50px;
-	box-shadow: 0 4px 40px rgba(240, 210, 71,0.27), 0 3px 6px rgba(240, 210, 71,0.27);
+.about{
+	text-align: center;
 }
-.garanty-discr{
-	margin-top: 10px;
+.about-img{
+	margin-top: 30px;
+	width: 30px;
+	margin-bottom: 30px;
+
 }
-.garanty-img{
+.call-to-action{
+	text-align: center;
+
+}
+.about-plus-descr{
 	margin-top: 20px;
-	margin-bottom: 40px;
+}
+.electro-portfolio-img{
+	height: 150px;
 }
 
