--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@
 body{
 	background:#fefefe;
 	color:#19171b;
-	font-family: 'Fira Sans Extra Condensed', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -77,18 +77,21 @@ body{
 	z-index: -1;
 } */
 .contact-us{
-	background-color: transparent;
+	background-color: #ffbc6b;
 	padding: 8px 25px 8px 25px;
 	font-size: 1.1rem;
-	border:3px solid #f79725;
+	border:3px solid #ffbc6b;
 	border-radius: 50px;
+	outline:none;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
-	color:#3c3b3d;
-	/* box-shadow: 0px 4px 20px rgba(60, 59, 61, 0.23); */
-	outline: none;
-
-
+	color:#616161;
+	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
+	transition: all 3s, 0.7s ease-in-out;
+}
+.contact-us:hover{
+	padding: 8px 25px 8px 25px;
+	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
 }
 
 .st20 {
