--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,8 @@
 }
 body{
 	background:#fefefe;
-	color:#19171b;
-	font-family: 'Open Sans', sans-serif;
+	color:#616161;
+	font-family: 'Ubuntu', sans-serif;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -77,47 +77,22 @@ body{
 	z-index: -1;
 } */
 .contact-us{
-	background-color: #ffbc6b;
-	padding: 8px 25px 8px 25px;
+	background-image:linear-gradient(to right,	#ffc987,#f79725) ;
+	padding: 10px 27px 10px 27px;
 	font-size: 1.1rem;
-	border:3px solid #ffbc6b;
 	border-radius: 50px;
-	outline:none;
+	border: 0;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
-	color:#616161;
+	color:#595959;
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
 }
 .contact-us:hover{
-	padding: 8px 25px 8px 25px;
 	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
 }
 
-.st20 {
-	stroke-dasharray: 2000;
-  stroke-dashoffset: 2000;
-  animation: dash_1 10s linear;
-	animation-fill-mode: forwards;
-	animation-iteration-count:infinite;
--moz-animation-iteration-count:infinite;
--webkit-animation-iteration-count:infinite;
- 
-}
-@keyframes dash_1 {
-  0% {
-		stroke-dashoffset: -1000;
-		fill:#f7992563;
-  }
-  50% {
-		stroke-dashoffset: 0;
-		fill:#eeff01;
-	}
-	100% {
-		stroke-dashoffset: 2000;
-		fill:#f7992563;
-	}
-}
+
 /* .header-row-one-img{
 	background-image:url(/img/header_img_2.svg);
 	height: 100%;
