--- a/css/404.css
+++ b/css/404.css
@@ -4,6 +4,7 @@
 	font-family: 'Ubuntu', sans-serif;
 	box-sizing: border-box;
 	color:#616161;
+	box-sizing: border-box;
 }
 h1{
 	font-size: 100px;
@@ -14,6 +15,12 @@ h1{
 	align-items: center;
 	justify-content: center;
 	width: 100vw;
+	background-image: url('/img/404bgimg.svg');
+	background-repeat: no-repeat;
+	background-size: 1000px;
+	background-position: top center;
+	
+
 	background-color: #fefefe;
 	height: 100vh;
 }
@@ -23,7 +30,12 @@ h1{
 	align-items: center;
 	padding-right: 50px;
 }
-
+h1::selection {
+	background: #f79725;
+}
+small::selection {
+	background: #f79725;
+}
 .error_container{
 	display: flex;
 	flex-direction: row;
@@ -35,11 +47,10 @@ h1{
 .img_error_container{
 	display: flex;
 	align-content: center;
-
-
 }
 .back:hover{
 		box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
+		cursor: pointer;
 }
 .error_img{
 	margin-left: 80px;
@@ -50,24 +61,17 @@ h1{
 .svg_img{
 	animation: movez 10s infinite;
 	transition: 2s;
-
 }
 @keyframes movez {
-	/* 0%   {
-		transform: rotatex(0deg);
-	} */
 	25%  {
 		transform:rotateZ(-20deg);
 	}
 	50%  {
 		transform: rotateZ(20deg);
 	}
-		/* 75%  {
-			transform:rotateZ(-20deg);
-		} */
-		100%  {
-			transform: rotateZ(0deg);
-		}
+	100%  {
+		transform: rotateZ(0deg);
+	}
 }
 @keyframes move {
 	0%   {
@@ -92,6 +96,7 @@ h1{
 	color:#595959;
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
+	user-select: none;
 }
 .img_error_bg{
 	position:absolute;
@@ -99,6 +104,7 @@ h1{
 	width: 300px;
 	height: 700px;
 	animation: opacity 8s infinite;
+	user-select: none;
 }
 @keyframes opacity {
 	0%   {
@@ -125,6 +131,9 @@ h1{
 @media (max-width:650px){
 	.error_container{
 		flex-direction: column;
+	}
+	.container{
+		background-size: 600px;
 	}
 	.error_text{
 		order: 1;
@@ -172,6 +181,26 @@ justify-content: center;
 		100%  {
 			transform: translateX(0px);
 			opacity: .8;
+		}
+	}
+}
+@media (max-width:330px){
+	.svg_img{
+		width: 40px;
+		height: 40px;
+	}
+	.error_text{
+		padding-top: 80px;
+	}
+	@keyframes move {
+		0%   {
+			transform: translateY(-60px);
+		}
+		50%  {
+			transform: translateY(-30px);
+		}
+		100%  {
+			transform: translateY(-60px);
 		}
 	}
 }
