--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,8 @@ body{
 	font-size: 1.1rem;
 	border-radius: 50px;
 	border: 0;
+	outline: none;
+	border: none;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
 	color:#595959;
@@ -91,7 +93,49 @@ body{
 .contact-us:hover{
 	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
 }
+.menu-btn {
+	display: block;
+	margin-left: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+	position: relative;
+	z-index: 30;
+}
+.menu-btn span,
+.menu-btn span::before,
+.menu-btn span::after {
+  position: absolute;
+  top: 50%; margin-top: -1px;
+  left: 50%; margin-left: -10px;
+  width: 20px;
+  height: 2px;
+  background-color: #222;
+}
+.menu-btn span::before,
+.menu-btn span::after {
+  content: '';
+  display: block;
+  transition: 0.2s;
+}
+.menu-btn span::before {
+  transform: translateY(-5px);
+}
+.menu-btn span::after {
+  transform: translateY(5px);
+}
 
+.menu-btn_active span:before {
+  transform: rotate(-35deg);
+  width: 10px;
+  transform-origin: left bottom;
+}
+.menu-btn_active span:after {
+  transform: rotate(35deg);
+  width: 10px;
+  transform-origin: left top;
+}
 
 /* .header-row-one-img{
 	background-image:url(/img/header_img_2.svg);
@@ -196,6 +240,108 @@ body{
 	}
 	.cards{
 		padding-top: 200px;
+	}
+}
+.menu-btn{
+	display:none;
+}
+.navbar{
+	position: fixed;
+	top:0;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 80px;
+	background-color: #fff;
+	box-shadow: 0px 5px 20px rgba(61, 60, 59, 0.1);
+	z-index: 10;
+}
+.main-navigation{
+	position: fixed;
+	top:0;
+	width: 100%;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+}
+.main-navigation-container{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+}
+.navbar-brand{
+	margin-left: 20px;
+}
+.navbar-links{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	
+}
+.nav-link{
+	list-style-type: none;
+}
+.nav-a{
+	text-decoration: none;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+@media (max-width: 978px){
+	.menu-btn{
+		display:flex;
+	visibility: visible;
+	cursor: pointer;
+	}
+	.main-navigation-container{
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		position: absolute;
+		left:0;
+		top:0;
+		height: 100vh;
+		margin-top: 80px;
+		padding-left: 30px;
+		padding-right: 30px;
+		padding-bottom: 30px;
+		border-radius: 0px 0px 10px 10px;
+		background-color: #fff;
+		box-shadow: 0px 5px 20px rgba(61, 60, 59, 0.1);
+		transition: 1s;
+		transform: translateX(-100%);
+	}
+	.main-navigation-container_active{
+		transition: 1s;
+		transform: translateX(0%);
+	;}
+	.navbar-links{
+		flex-direction: column;
+		flex-wrap: nowrap;
+		align-items: center;
+		align-content: center;
+		justify-content: center;
+		justify-items: center;
+		padding: 0;
+		
+	}
+	.main-navigation{
+		justify-content: flex-end;
+	}
+	.nav-link{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+		list-style-type: none;
+		margin-top: 15px;
+		margin-bottom: 15px;
+	}
+	.navbar-brand{
+		margin-right: 10px;
 	}
 }
 
