--- a/css/main.css
+++ b/css/main.css
@@ -311,11 +311,11 @@ body{
 		border-radius: 0px 0px 10px 10px;
 		background-color: #fff;
 		box-shadow: 0px 5px 20px rgba(61, 60, 59, 0.1);
-		transition: 1s;
+		transition: 0.3s;
 		transform: translateX(-100%);
 	}
 	.main-navigation-container_active{
-		transition: 1s;
+		transition: 0.7s ease;
 		transform: translateX(0%);
 	;}
 	.navbar-links{
@@ -342,6 +342,22 @@ body{
 	}
 	.navbar-brand{
 		margin-right: 10px;
+	}
+	.main-menu-btn{
+		margin-top: 50px;
+		height: 40px;
+		width: auto;
+		background-color:#f79725;
+	padding: 3px 12px 3px 12px;
+	font-size: 1.1rem;
+	border-radius: 50px;
+	border: 0;
+	outline: none;
+	border: none;
+	letter-spacing: 0.1rem;
+	text-transform: uppercase;
+	color:white;
+	transition: all 3s, 0.7s ease-in-out;
 	}
 }
 
