--- a/css/form.css
+++ b/css/form.css
@@ -60,10 +60,14 @@ input:focus, input:valid {
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
 	user-select: none;
+	border: none;
+	outline: none;
 
 }
 .back:hover {
-  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.0);
+	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.0);
+	border: none;
+	outline: none;
 }
 input:valid + span:after {
 	content: '✓';
@@ -82,8 +86,14 @@ input:valid + span:after {
 }
 @media (max-width:500px){
 	.contact_us_form_cotainer{
-		padding: 20px 0px 20px 0px;
+		padding: 20px 15px 20px 0px;
 	}
+}
+input:valid + span:after {
+	content: '✓';
+	position: absolute;
+	color: #f79725;
+	margin-left: -15px;
 }
 .contact_us_text{
 	font-size: 22px;
