--- a/css/404.css
+++ b/css/404.css
@@ -95,6 +95,8 @@ small::selection {
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
 	user-select: none;
+	outline: none;
+	border: none;
 }
 .img_error_bg{
 	position:absolute;
