--- a/css/form.css
+++ b/css/form.css
@@ -4,7 +4,6 @@
 	font-family: 'Ubuntu', sans-serif;
 	box-sizing: border-box;
 	color:#616161;
-	box-sizing: border-box;
 }
 .contact_us_form{
 	display: flex;
@@ -68,12 +67,16 @@ input:focus, input:valid {
 	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.0);
 	border: none;
 	outline: none;
+	cursor: pointer;
 }
 input:valid + span:after {
-	content: '✓';
+	content: url('/img/acept_img.svg');
+	height: 25px;
+	width: 25px;
 	position: absolute;
 	color: #f79725;
 	padding-left: 5px;
+	padding-bottom: 10px;
 }
 .contact_us_lable{
 	display: flex;
@@ -90,10 +93,12 @@ input:valid + span:after {
 	}
 }
 input:valid + span:after {
-	content: '✓';
+	content: url('/img/acept_img.svg');
+	height: 25px;
+	width: 25px;
 	position: absolute;
 	color: #f79725;
-	margin-left: -15px;
+	margin-left: -20px;
 }
 .contact_us_text{
 	font-size: 22px;
