--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,15 @@
-
+h1::selection {
+	background: #f79725;
+}
+small::selection {
+	background: #f79725;
+}
+p::selection {
+	background: #f79725;
+}
+a::selection {
+	background: #f79725;
+}
 .svg_logo{
 	width:180px;
 	height:58.8px;
@@ -90,6 +101,7 @@ body{
 	color:#595959;
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
+	cursor: pointer;
 }
 .contact-us:hover{
 	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
@@ -156,6 +168,14 @@ body{
 	color: #fff;
 	outline: none;
 	border: 0;
+	font-size: 1rem;
+	transition: 0.3s;
+}
+.main-menu-btn:hover{
+	background-color: #ffffff;
+	border: 1px solid #f79725;
+	color:#f79725;
+	cursor: pointer;
 }
 .header-row-text,.header-row-info{
 	display: flex;
@@ -288,8 +308,25 @@ body{
 }
 .nav-a{
 	text-decoration: none;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
+	padding-bottom: 2px;
+	color:#595959; 
+}
+
+.navbar-brand, .nav-a{
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #f79725 4%);
+  background-position: -250px 0;
+  background-size: 250px 100%;
+  background-repeat: no-repeat;
+	transition: 1s;
+	animation: 1s;
+}
+.navbar-brand:hover{
+  background-position: 0 0;
+}
+.nav-a:hover{
+	background-position: 0 0;
 }
 @media (max-width: 978px){
 	.menu-btn{
@@ -354,23 +391,12 @@ body{
 	border-radius: 50px;
 	border: 0;
 	outline: none;
-	border: none;
+	border: 1px solid #f79725;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
 	color:white;
 	transition: all 3s, 0.7s ease-in-out;
 	}
-}
-.navbar-brand{
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #f79725 4%);
-  background-position: -250px 0;
-  background-size: 250px 100%;
-  background-repeat: no-repeat;
-	transition: 1s;
-	animation: 1s;
-}
-.navbar-brand:hover{
-  background-position: 0 0;
 }
 
 
