--- a/css/form.css
+++ b/css/form.css
@@ -14,7 +14,7 @@
 	opacity: .5;
 }
 .contact_us_form_cotainer{
-	padding:35px 50px 30px 30px;
+	padding:15px 35px 30px 30px;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
@@ -25,6 +25,45 @@
 	border-radius: 20px;
 	transition: 1s;
 }
+.contact_us_social{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+}
+.social_vicon, .social_yicon{
+	width: 30px;
+	height: 30px;
+	margin-left: 10px;
+	margin-right: 10px;
+	fill: #616161;
+	opacity: 0.7;
+	transition: 0.4s;
+}
+.social_icon_effect:hover{
+	fill:#f79725;
+	opacity: 1;
+}
+.contact_logo{
+display: flex;
+justify-content: center;
+}
+.contact_logo_img{
+	width: 180px;
+	height: 70px;
+	opacity: .7;
+}
+.social_iicon, .social_ficon{
+	width: 20px;
+	height: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
+	fill: #616161;
+	opacity: 0.7;
+	transition: 0.4s;
+}
+
+
 input {
   margin: 8px 25px;
   width: 250px;
@@ -71,8 +110,8 @@ input:focus, input:valid {
 }
 input:valid + span:after {
 	content: url('/img/acept_img.svg');
-	height: 25px;
-	width: 25px;
+	height: 5px;
+	width: 5px;
 	position: absolute;
 	color: #f79725;
 	padding-left: 5px;
@@ -84,6 +123,7 @@ input:valid + span:after {
 	align-items: center;
 }
 .contact_us_button{
+	margin-top: 20px;
 	display: flex;
 	justify-content: center;
 }
@@ -94,13 +134,14 @@ input:valid + span:after {
 }
 input:valid + span:after {
 	content: url('/img/acept_img.svg');
-	height: 25px;
-	width: 25px;
+	height: 20px;
+	width: 20px;
 	position: absolute;
 	color: #f79725;
-	margin-left: -20px;
+	margin-left: -40px;
+	margin-top: -10px;
 }
 .contact_us_text{
 	font-size: 22px;
-	margin-bottom: 40px;
+	margin-bottom: 10px;
 }
