--- a/css/slider.css
+++ b/css/slider.css
@@ -1,136 +1,164 @@
-body, footer{
-	background:#fefefe;
-	color:#595959;
-	font-family: 'Ubuntu', sans-serif;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-weight: 300;
+
+#slider {
+	margin: 0 auto;
+	width: 800px;
+	max-width: 100%;
+	text-align: center;
 }
 
-.slider_element_img{
-	object-fit: cover;
-	height: 50%;
+#slider input[type=radio] {
+	display: none;
+}
+
+#slider label {
+	cursor: pointer;
+	text-decoration: none;
+}
+
+#slides {
+	border-radius: 5px;
+	box-shadow: 1px 1px 4px #666;
+	padding: 8px;
+	background: #fff;
+	position: relative;
+	z-index: 1;
+}
+
+#overflow {
 	width: 100%;
 	overflow: hidden;
-	overflow-y: hidden;
-	border-radius: 11px 11px 0px 0px;
 }
-.slider_container{
+
+#slide1:checked ~ #slides .inner {
+	margin-left: 0;
+}
+#slide2:checked ~ #slides .inner {
+	margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner {
+	margin-left: -200%;
+}
+
+#slide4:checked ~ #slides .inner {
+	margin-left: -300%;
+}
+
+#slide5:checked ~ #slides .inner {
+	margin-left: -400%;
+}
+
+#slides .inner {
+	-webkit-transform: translateZ(0);
+	transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+
+#slides .inner {
+	width: 500%;
+	line-height: 0;
+	height: 200px;
+}
+
+#slides .slide {
+	width: 20%;
+	float: left;
+	display: block;
+	height: 100%;
+	color: #FFFFFF;
+}
+#slides .slide_1 {
+	background-color: #d9534f;
+}
+#slides .slide_2 {
+	background-color: #5cb85c;
+}
+#slides .slide_3 {
+	background-color: #5bc0de;
+}
+#slides .slide_4 {
+	background-color: #f0ad4e;
+}
+#slides .slide_5 {
+	background-color: #0275d8;
+}
+
+#controls {
+	margin: -130px 0 0 0;
 	width: 100%;
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: center;
-	transition: 1s;
-	
-}
-.element_button{
-	background-color:transparent;
-	margin-top: 20px;
-	padding: 10px 14px 10px 14px;
-	border-radius: 20px;
-	width:120px;
-	border: 1px solid #f79725;
-	outline: none;
-	text-transform: uppercase;
-	color:#595959;
-	cursor: pointer;
-}
-.card-more{
-	align-self: center;
-}
-.element_button:hover{
-	background-color:#fdbe71;
-}
-.element-card_text_container{
-	display:flex;
-	flex-direction: column;
-	padding-right: 20px;
-	padding-left: 20px;
-}
-.slider_element{
-	margin: 10px 30px 10px 30px;
-	display: flex;
-	flex-direction: column;
-} 
-
-.element-card {
-  width: 300px;
-  height: 400px;
-  background-color: #FFFFFF;
-  border-radius: 11px;
-  border: 1px solid rgba(204, 204, 204, 0.7);
-  overflow: visible;
-  margin: 10px;
-	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0);
-	transition: 400ms;
-}
-.element-card:hover {
-	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.16);
-	transform: translateY(-5px);
+	height: 50px;
+	z-index: 3;
+	position: relative;
 }
 
-
-.social_icon_effect:hover{
-	fill:#f79725;
+#controls label {
+	transition: opacity 0.2s ease-out;
+	display: none;
+	width: 50px;
+	height: 50px;
+	opacity: 0.4;
+}
+#controls label:hover {
 	opacity: 1;
 }
-.social_iicon, .social_ficon{
-	width: 20px;
-	height: 20px;
-	margin-left: 10px;
-	margin-right: 10px;
-	fill: #595959;
-	opacity: 0.5;
-	transition: 0.4s;
-}
-.social_vicon, .social_yicon{
-	width: 30px;
-	height: 30px;
-	margin-right: 10px;
-	fill: #616161;
-	opacity: 0.5;
-	transition: 0.4s;
-}
-.footer-social-icon{
-	display: flex;
-	justify-content: center;
-	padding-top: 16px;
-	align-items: center;
 
-}
-.footer-container{
-	padding:40px 50px 40px 50px;
-	margin-left: 8%;
-	margin-right: 8%;
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	border-radius: 11px;
-	box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.16);
-	border: 1px solid rgba(204, 204, 204, 0.7);
-	background: #fefefe;
-	transform: translateY(-40px);
-	flex-wrap: wrap;
-}
-.footer-logo{
-	width:120px;
-}
-.site-footer-copiright{
-	display: flex;
-	flex-direction: column;
+#slide1:checked ~ #controls label:nth-child(2), 
+#slide2:checked ~ #controls label:nth-child(3), 
+#slide3:checked ~ #controls label:nth-child(4), 
+#slide4:checked ~ #controls label:nth-child(5), 
+#slide5:checked ~ #controls label:nth-child(1) {
+	background: url(http://www.withoutjs.com/assets/images/slider/next.png) no-repeat;
+	float: right;
+	margin: 0 -50px 0 0;
+	display: block;
 }
 
-.social-text, .footer-contact,.copiright{
-	font-size: 20px;
-	font-weight: 500;
+#slide1:checked ~ #controls label:nth-child(5), 
+#slide2:checked ~ #controls label:nth-child(1), 
+#slide3:checked ~ #controls label:nth-child(2), 
+#slide4:checked ~ #controls label:nth-child(3), 
+#slide5:checked ~ #controls label:nth-child(4) {
+	background: url(http://www.withoutjs.com/assets/images/slider/prev.png) no-repeat;
+	float: left;
+	margin: 0 0 0 -50px;
+	display: block;
 }
-.site-footer{
-	margin-top: 100px;
-	background: rgba(247, 151, 37,.1);
-	padding-bottom: 20px;
+
+#bullets {
+	margin: 100px 0 0;
+	text-align: center;
 }
-.footer-links{
-	display: flex;
-	flex-direction: row;
+
+#bullets label {
+	border-radius: 5px;
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	background: #bbb;
 }
+
+#slide1:checked ~ #bullets label:nth-child(1), 
+#slide2:checked ~ #bullets label:nth-child(2), 
+#slide3:checked ~ #bullets label:nth-child(3), 
+#slide4:checked ~ #bullets label:nth-child(4),
+#slide5:checked ~ #bullets label:nth-child(5) {
+	background: #333;
+}
+/* responsive behaviour of controls */
+@media screen and (max-width: 900px) {
+	#slide1:checked ~ #controls label:nth-child(5), 
+	#slide2:checked ~ #controls label:nth-child(1), 
+	#slide3:checked ~ #controls label:nth-child(2), 
+	#slide4:checked ~ #controls label:nth-child(3), 
+	#slide5:checked ~ #controls label:nth-child(4) {
+		margin: 0;
+	}
+
+	#slide1:checked ~ #controls label:nth-child(2), 
+	#slide2:checked ~ #controls label:nth-child(3), 
+	#slide3:checked ~ #controls label:nth-child(4), 
+	#slide4:checked ~ #controls label:nth-child(5), 
+	#slide5:checked ~ #controls label:nth-child(1) {
+		margin: 0;
+	}
+}
+
+							
