--- a/css/main.css
+++ b/css/main.css
@@ -62,35 +62,34 @@ body{
 }
 .main-container{
 	margin-top: 80px;
+	
 }
 .header-row-one h1{
 	font-weight: 700;
 	text-transform: uppercase;
 }
 .header-row-one{
-	left: 5%;
 	display: flex;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+	text-align: center;
 	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	
+	background-image: url('/img/1355-min.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	z-index: 0;
+	color: #fefefe;
 }
-.header-row-one-img{
-	display: flex;
-	justify-content: center;
-}
-/* .header-row:before{
-	content:'';
+.header-row-one::before{
+	content: '';
 	position: absolute;
-	width: 80vh;
-	height:80vh;
-	top:-20%;
-	right: 0;
-	background-color: #f79725;
-	background-image: linear-gradient(to top, #f79725, #f3e51b);
-	border-radius:400px 0px 400px 400px;
-	z-index: -1;
-} */
+	top:0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(89, 89, 89,0.4);
+	z-index: -2;
+}
 .contact-us{
 	background-image:linear-gradient(to right,	#ffc987,#f79725) ;
 	padding: 10px 27px 10px 27px;
@@ -105,6 +104,7 @@ body{
 	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
 	transition: all 3s, 0.7s ease-in-out;
 	cursor: pointer;
+	margin-top: 30px;
 }
 .contact-us:hover{
 	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
@@ -152,13 +152,6 @@ body{
   width: 10px;
   transform-origin: left top;
 }
-
-/* .header-row-one-img{
-	background-image:url(/img/header_img_2.svg);
-	height: 100%;
-	background-position: top;
-	background-repeat: no-repeat;
-} */
 .main-menu-container{
 	padding-top: 0;
 	padding-bottom: 0;
@@ -186,43 +179,190 @@ body{
 	align-items: center;
 }
 .header-row{
-	height: 55vh;
+	height: 90vh;
 	color:#3c3b3d!important;
 }
 
-.card-img{
-	width: 40px;
-}
-.card-about{
-	display: flex;
-	flex-direction: row;
-	align-content: center;
-	max-width: 270px;
-	margin-left: 10px;
-	margin-right: 10px;
-	background-color: #3c3b3d;
-	color: #fff;
-	margin-top: 20px;
-	padding:10px 5px 10px 5px;
-	border-radius: 6px;
-	
-}
-.card-img{
-	display: flex;
-	align-content: center;
-	margin: 10px 10px 10px 10px;
-}
 .img-container{
 	margin-left: 10px;
 	background-image: radial-gradient(circle,rgba(247, 151, 37, 0.3),#3c3b3d);
 	border-radius: 500px;
 }
-.card-descr{
+.site-content{
 	display: flex;
-	align-items: center;
-	font-size: 12px;
-	margin-left: 20px;
+	margin-left: 3%;
+	margin-right: 3%;
+	box-shadow: 0px 5px 19px 0px rgba(0, 0, 0, 0.12);
+	border-radius: 11px;
+	transform: translateY(-70px);
+	background-color: #fefefe;
 }
+.electriс{
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	z-index: 10;
+}
+.electric-descr{
+	align-self: flex-start;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+
+.up-button{
+	position: fixed;
+	right: 10px;
+	bottom: 20px;
+	padding: 4px 6px 4px 6px;
+	background: #f79725;
+	border-radius: 4px;
+	opacity: 0.5;
+	transition: 0.5s;
+	z-index: 10;
+}
+.up-button:hover{
+	opacity: 1;
+}
+.up{
+	width: 20px;
+	height: 20px;
+	fill:#fff;
+	z-index: 11;
+}
+.slider_element_img{
+	object-fit: cover;
+	height: 50%;
+	width: 100%;
+	overflow: hidden;
+	overflow-y: hidden;
+	border-radius: 11px 11px 0px 0px;
+}
+.slider_container{
+	width: 100%;
+	flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	transition: 1s;
+	
+}
+.element_button{
+	background-color:transparent;
+	margin-top: 20px;
+	padding: 10px 14px 10px 14px;
+	border-radius: 20px;
+	width:120px;
+	border: 1px solid #f79725;
+	outline: none;
+	text-transform: uppercase;
+	color:#595959;
+	cursor: pointer;
+}
+.card-more{
+	align-self: center;
+}
+.element_button:hover{
+	background-color:#fdbe71;
+}
+.element-card_text_container{
+	display:flex;
+	flex-direction: column;
+	padding-right: 20px;
+	padding-left: 20px;
+}
+.slider_element{
+	margin: 10px 30px 10px 30px;
+	display: flex;
+	flex-direction: column;
+} 
+
+.element-card {
+  width: 300px;
+  height: 400px;
+  background-color: #FFFFFF;
+  border-radius: 11px;
+  border: 1px solid rgba(204, 204, 204, 0.7);
+  overflow: visible;
+  margin: 10px;
+	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0);
+	transition: 400ms;
+}
+.element-card:hover {
+	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.16);
+	transform: translateY(-5px);
+}
+
+
+.social_icon_effect:hover{
+	fill:#f79725;
+	opacity: 1;
+}
+.social_iicon, .social_ficon{
+	width: 25px;
+	height: 25px;
+	margin-left: 10px;
+	margin-right: 10px;
+	fill: #595959;
+	opacity: 0.5;
+	transition: 0.4s;
+}
+.social_vicon, .social_yicon{
+	width: 26px;
+	height: 26px;
+	margin-right: 10px;
+	fill: #616161;
+	opacity: 0.5;
+	transition: 0.4s;
+}
+.footer-social-icon{
+	display: flex;
+	justify-content: center;
+	padding-top: 16px;
+	align-items: center;
+
+}
+.footer-container{
+	padding:40px 50px 40px 50px;
+	margin-left: 8%;
+	margin-right: 8%;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	border-radius: 11px;
+	box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.16);
+	border: 1px solid rgba(204, 204, 204, 0.7);
+	background: #fefefe;
+	transform: translateY(-40px);
+	flex-wrap: wrap;
+}
+.footer-logo{
+	width:120px;
+}
+.site-footer-copiright{
+	display: flex;
+	flex-direction: column;
+}
+
+.social-text, .footer-contact,.copiright{
+	font-size: 20px;
+	font-weight: 500;
+}
+.site-footer{
+	margin-top: 100px;
+	background: rgba(247, 151, 37,.1);
+	padding-bottom: 20px;
+}
+.footer-links{
+	display: flex;
+	flex-direction: row;
+}
+
+
+
+
+
+
 @media (max-width:978px){
 	.main-menu-container{
 		padding-top: 0;
@@ -233,37 +373,15 @@ body{
 .st20{
 	fill: #ffffff;;
 }
-	/* .header-row:before{
-		content:'';
-		position: absolute;
-		width: 60vh;
-		height:60vh;
-		top:-20%;
-		right: 0;
-		background-color: #f79725;
-		background-image: linear-gradient(to top, #f79725, #f3e51b);
-		border-radius:400px 0px 400px 400px;
-		z-index: -1;
-	} */
-	/* .header-row-one-img{
-		background-image:url(/img/header_img_2.svg);
-		height: 90%;
-		background-position: top;
-		background-repeat: no-repeat;
-	} */
 	.main-container{
 		margin-top: none;
 	}
 	.header-row-one{
-		left: 0;
 		display: flex;
 		justify-content: center;
 		align-content: center;
 		align-items: center;
 		text-align: center;
-	}
-	.cards{
-		padding-top: 200px;
 	}
 }
 .menu-btn{
