--- a/css/main.css
+++ b/css/main.css
@@ -75,13 +75,13 @@ body{
 	align-items: center;
 	text-align: center;
 	flex-direction: column;
-	background-image: url('/img/1355-min.jpg');
+	background-image: url('/img/header_bg.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	z-index: 0;
 	color: #fefefe;
 }
-.header-row-one::before{
+/* .header-row-one::before{
 	content: '';
 	position: absolute;
 	top:0;
@@ -89,7 +89,7 @@ body{
 	height: 100%;
 	background-color: rgba(89, 89, 89,0.4);
 	z-index: -2;
-}
+} */
 .contact-us{
 	background-image:linear-gradient(to right,	#ffc987,#f79725) ;
 	padding: 10px 27px 10px 27px;
@@ -179,7 +179,7 @@ body{
 	align-items: center;
 }
 .header-row{
-	height: 90vh;
+	height: 80vh;
 	color:#3c3b3d!important;
 }
 
@@ -240,7 +240,6 @@ body{
 	border-radius: 11px 11px 0px 0px;
 }
 .slider_container{
-	width: 100%;
 	flex-wrap: wrap;
 	display: flex;
 	justify-content: center;
