--- a/css/main.css
+++ b/css/main.css
@@ -67,24 +67,43 @@ body{
 	flex-direction: column;
 	
 }
-.header-row-one h1{
-	font-size: 48px;
-	font-weight: 700;
-	text-transform: uppercase;
-}
 .main-hero{
 	fill: #f79725;
 	animation: dash 10s linear;
 }
+.header-row-text{
+		font-size: 60px;
+		font-family: "Ubuntu";
+		color: rgb(255, 255, 255);
+		font-weight: bold;
+		line-height: 0.956;
+}
+.header-row-text-descr {
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+	line-height: 1.2;
+	margin-left: 30px;
+	position: relative;
+}
+.header-row-text-descr:after {
+	content: '';
+	border-radius: 3px;
+	height: 100%;
+	position: absolute;
+	top:0;
+  left: -28px;
+  border:2px solid rgb(255, 255, 255);
+}
 .header-row{
-	height: 80vh;
+	height: calc(100vh - 80px);
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	position: relative;
-	/* background-image: url('/img/header_bg.jpg');
+	background-image: url('/img/hero_bg.jpg');
 	background-size: cover;
-	background-position: right center; */
+	background-position: right center;
+	overflow: hidden;
 }
 .header-row-one{
 	color: #616161;
@@ -92,42 +111,66 @@ body{
 	margin-bottom: 10%;
 	z-index: 2;
 }
-.ie-main-hero{
+.mause {
+  border-width: 1px;
+  border-color: rgb(255, 255, 255);
+	border-style: solid;
 	position: absolute;
-	top: 0;
-	right: 0;
-	min-width: 60%;
-	min-height: 60%;
-	margin: 0;
-
+	top:5px;
+	left:8px;
+  width: 2px;
+  height: 2px;
 }
-/* .header-row::before{
+.mouse-scroll:after{
 	content: '';
+	border-radius: 3px;
+	height: 50%;
 	position: absolute;
-	top:0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(255, 255, 255, 0.8);
-	z-index: 0;
-}  */
+	top:-25px;
+  left: 9px;
+  border:1px solid rgb(255, 255, 255);
+}
+.mouse-scroll {
+	position: absolute;
+	left: calc(10% - 15px);
+	bottom: 100px;
+  border-width: 1px;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-radius: 10px;
+  position: absolute;
+  width: 20px;
+	height: 30px;
+	animation: mause 2s infinite ease-in-out;
+}
+@keyframes mause{
+	0%{
+		transform: translateY(-10px);
+	}
+	50%{
+		transform: translateY(0px);
+	}
+	100%{
+		transform: translateY(-10px);
+	}
+}
 .contact-us{
-	background-image:linear-gradient(to right,	#ffc987,#f79725) ;
-	padding: 10px 27px 10px 27px;
-	font-size: 1.1rem;
+	background-color:#f79725;
+	padding: 8px 18px 8px 18px;
+	font-size: 18px;
 	border-radius: 50px;
-	border: 0;
 	outline: none;
-	border: none;
+	border: 2px solid #f79725;
 	letter-spacing: 0.1rem;
 	text-transform: uppercase;
-	color:#595959;
-	box-shadow: 0px 20px 50px rgba(61, 60, 59, 0.29);
-	transition: all 3s, 0.7s ease-in-out;
+	color:#ffffff;
+	transition:0.5s ease-in-out;
 	cursor: pointer;
 	margin-top: 30px;
 }
 .contact-us:hover{
-	box-shadow: 0px 5px 5px rgba(61, 60, 59, 0.1);
+	background-color: rgba(247, 151, 37,0.4);
+	color:#ffffff;
 }
 .menu-btn {
 	display: block;
@@ -201,26 +244,242 @@ body{
 	border-radius: 500px;
 }
 .site-content{
-	display: flex;
-	margin-left: 3%;
-	margin-right: 3%;
-	box-shadow: 0px 5px 19px 0px rgba(0, 0, 0, 0.12);
-	border-radius: 11px;
-	transform: translateY(-70px);
-	background-color: #fefefe;
-}
-.electriс{
-	position: relative;
+	align-self: center;
 	display: flex;
 	flex-direction: column;
+	max-width: 1530px;
+	border-radius: 11px;
+	background-color: #fefefe;
+}
+.about-section{
+	margin-top: 60px;
+	margin-bottom: 60px;
+	position: relative;
+	display: flex;
+	justify-content: space-around;
 	align-items: center;
-	z-index: 10;
 }
-.electric-descr{
-	align-self: flex-start;
-	margin-left: 5%;
-	margin-right: 5%;
+.about-section-img,.about-section-text{
+	max-width: 45%;
 }
+.about-section-img{
+	display: flex;
+	flex-direction: column;
+	z-index: 2;
+	position: relative;
+	box-sizing: border-box;
+	
+}
+.shadow-img{
+	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.2);
+}
+.about-section-img:after{
+	content:'';
+	position: absolute;
+	top:-20px;
+	left: -20px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(247, 151, 37,0.26);
+	z-index: -1;
+}
+.about-section-img-2col{
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 24px;
+}
+.col-img-left{
+	width: 47%;
+	height: 47%;
+}
+.col-img-right{
+	margin-left: 12px;
+	width: 47%;
+	height: 47%;
+}
+.about-section-text-tiitle{
+		font-size: 40px;
+		color: rgb(97, 97, 97);
+		font-weight: bold;
+		line-height: 1.2;
+		text-align: left;
+		margin-bottom: 30px;
+		position: relative;
+}
+.about-section-text-tiitle:after{
+	content:'о нас';
+	text-transform: uppercase;
+	font-size: 150px;
+		color: rgba(97, 97, 97, 0.149);
+		font-weight: bold;
+		line-height: 1.2;
+		text-align: center;
+		position: absolute;
+	top: -0.5em;
+	left:-0.5em;
+	
+}
+.focus-text{
+position: relative;
+}
+
+.focus-text:after{
+	content: '';
+	border-radius: 3px;
+	height: 6px;
+	width: 100%;
+	position: absolute;
+	bottom:-7px;
+	left:0;
+  background-color: #f79725;
+}
+.about-section-text-descr{
+	font-size: 16px;
+}
+.bads{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top:100px;
+	
+}
+.bads-tiitle{
+	font-size: 40px;
+	color: rgb(97, 97, 97);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: left;
+	margin-bottom: 30px;
+	position: relative;
+	margin-bottom: 60px;
+}
+.bads-tiitle:after{
+content:'риски';
+text-transform: uppercase;
+font-size: 150px;
+	color: rgba(97, 97, 97, 0.149);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: center;
+	position: absolute;
+top: -0.5em;
+left:-0.5em;
+}
+.bads-card-container{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+.bads-card{
+	width: 300px;
+	margin:20px;
+	display: flex;
+	flex-direction: column;
+	border-radius: 20px;
+	align-items: center;
+	justify-content: center;
+	height: 350px;
+	border: 1px solid rgba(204, 204, 204, 0.7);
+  overflow: visible;
+	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0);
+	transition: 400ms;
+}
+.bads-card:hover {
+	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.16);
+	transform: translateY(-5px);
+}
+.bads-card-icon{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100px;
+}
+.bads-card-text{
+	max-width: 80%;
+}
+.bads-title{
+	text-align: center;
+}
+.bads-card-descr{
+		font-size: 16px;
+		line-height: 1.2;
+}
+
+.services-tittle{
+	font-size: 40px;
+	color: rgb(97, 97, 97);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: left;
+	margin-bottom: 30px;
+	position: relative;
+	margin-bottom: 60px;
+}
+.services-tittle:after{
+content:'услуги';
+text-transform: uppercase;
+font-size: 150px;
+	color: rgba(97, 97, 97, 0.149);
+	font-weight: bold;
+	line-height: 1.2;
+	text-align: center;
+	position: absolute;
+top: -0.5em;
+left:-0.5em;
+}
+
+
+
+.services{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top:100px;
+	
+}
+.servis-container{
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	z-index: 2;
+	position: relative;
+}
+.servis-container:before{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url('/img/bg-services.png');
+	left: -30%;
+	bottom: 0;
+	background-size: cover;
+	z-index: -1;
+}
+.service-card{
+	width: 45%;
+	display: flex;
+	flex-direction: row;
+	margin: 25px;
+	align-items: center;
+	justify-content: space-between;
+}
+.service-img{
+	width: 50%;
+	height: 220px;
+	object-fit: cover;
+	background-color:#fdbe71;
+}
+.service-text{
+	width: 45%;
+}
+.servise-text-descr {
+  font-size: 16px;
+  line-height: 1.2;
+
+}
+
 
 
 .up-button{
@@ -305,72 +564,54 @@ body{
 }
 
 
+.social_vicon_svg{
+	width: 16px;
+	height: 16px;
+}
+.social_vicon{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	width: 21px;
+	height: 21px;
+	fill: #fff;
+	opacity: 0.7;
+	transition: 0.4s;
+	border: 2px solid #fff;
+	border-radius: 5px;
+}
+
 .social_icon_effect:hover{
 	fill:#f79725;
 	opacity: 1;
 }
-.social_iicon, .social_ficon{
+.v_social_icon_effect:hover{
+	fill:#f79725;
+	opacity: 1;
+	border: 2px solid #f79725;
+}
+.social_ficon_svg,.social_iicon_svg{
 	width: 25px;
 	height: 25px;
-	margin-left: 10px;
-	margin-right: 10px;
-	fill: #595959;
-	opacity: 0.5;
-	transition: 0.4s;
 }
-.social_vicon, .social_yicon{
-	width: 26px;
-	height: 26px;
-	margin-right: 10px;
-	fill: #616161;
-	opacity: 0.5;
-	transition: 0.4s;
-}
-.footer-social-icon{
-	display: flex;
-	justify-content: center;
-	padding-top: 16px;
-	align-items: center;
-
-}
-.footer-container{
-	padding:40px 50px 40px 50px;
-	margin-left: 8%;
-	margin-right: 8%;
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	border-radius: 11px;
-	box-shadow: 0px 10px 19px 0px rgba(0, 0, 0, 0.16);
-	border: 1px solid rgba(204, 204, 204, 0.7);
-	background: #fefefe;
-	transform: translateY(-40px);
-	flex-wrap: wrap;
-}
-.footer-logo{
-	width:120px;
-}
-.site-footer-copiright{
+.hero-social{
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	right: 200px;
+	bottom: 100px;
 }
-
-.social-text, .footer-contact,.copiright{
-	font-size: 20px;
-	font-weight: 500;
+.social_iicon, .social_ficon{
+	fill: #fff;
+	transition: 0.4s;
+	opacity: 0.7;
 }
-.site-footer{
-	margin-top: 100px;
-	background: rgba(247, 151, 37,.1);
-	padding-bottom: 20px;
+.social_iicon{
+	margin-bottom: 6px;
+	margin-top: 8px;
 }
-.footer-links{
-	display: flex;
-	flex-direction: row;
-}
-
-
-
 
 
 
