--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ span::selection {
 a::selection {
 	background: #fab25a;
 }
+h3,h2{
+	margin:0;
+	padding: 0;
+}
 .svg_logo{
 	width:180px;
 	height:58.8px;
@@ -60,7 +64,8 @@ transition: 1s;}
 body{
 	background:#fefefe;
 	color:#616161;
-	font-family: 'Ubuntu', sans-serif; 
+font-family: 'Open Sans', sans-serif;
+font-weight: 400;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -78,7 +83,8 @@ body{
 }
 .header-row-text{
 		font-size: 60px;
-		font-family: "Ubuntu";
+		font-family: 'Roboto', sans-serif;
+		font-weight: 700;
 		color: rgb(255, 255, 255);
 		font-weight: bold;
 		line-height: 0.956;
@@ -137,8 +143,8 @@ body{
 }
 .mouse-scroll {
 	position: absolute;
-	left: calc(10% - 15px);
-	bottom: 100px;
+	left: calc(10% - 10px);
+	bottom: 5%;
   border-width: 1px;
   border-color: rgb(255, 255, 255);
   border-style: solid;
@@ -160,9 +166,10 @@ body{
 	}
 }
 .contact-us{
+	
 	background-color:#f79725;
 	padding: 8px 18px 8px 18px;
-	font-size: 18px;
+	font-size: 16px;
 	border-radius: 50px;
 	outline: none;
 	border: 2px solid #f79725;
@@ -174,8 +181,9 @@ body{
 	margin-top: 30px;
 }
 .contact-us:hover{
-	background-color: rgba(247, 151, 37,0.4);
-	color:#ffffff;
+	background-color: #FFFFFF;
+	color:#616161;
+	border: 2px solid #fff;
 }
 .menu-btn {
 	display: block;
@@ -255,10 +263,6 @@ body{
 	border-radius: 11px;
 	background-color: #fefefe;
 }
-.row{
-	max-width: 1530px;
-	
-}
 .row-center{
 	max-width: 1530px;
 	display: flex;
@@ -268,17 +272,25 @@ body{
 .about{
 	display: flex;
 	justify-content: center;
+	background-image: url('/img/about-img-bg.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+
 }
 .about-section{
-	margin-top: 60px;
-	margin-bottom: 60px;
+	margin-top: 100px;
+	margin-bottom: 50px;
 	position: relative;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	max-width: 1530px;
 }
 .about-section-img,.about-section-text{
 	max-width: 45%;
+}
+.about-section-text{
+	margin-bottom:20px; 
 }
 .about-section-img{
 	display: flex;
@@ -288,33 +300,24 @@ body{
 	box-sizing: border-box;
 	
 }
-.shadow-img{
-	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.2);
+.col-img{
+	width: 100%;
 }
 .about-section-img:after{
 	content:'';
 	position: absolute;
-	top:-20px;
-	left: -20px;
+	top:-10%;
+	left: -60px;
 	width: 100%;
-	height: 100%;
+	height: 120%;
+	border-radius: 15px;
 	background-color: rgba(247, 151, 37,0.26);
 	z-index: -1;
 }
-.about-section-img-2col{
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 24px;
-}
-.col-img-left{
-	width: 47%;
-}
-.col-img-right{
-	margin-left: 12px;
-	width: 47%;
-}
 .about-section-text-tiitle{
-		font-size: 40px;
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
+		font-size: 36px;
 		color: rgb(97, 97, 97);
 		font-weight: bold;
 		line-height: 1.2;
@@ -324,9 +327,11 @@ body{
 }
 .about-section-text-tiitle:after{
 	content:'о нас';
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
 	text-transform: uppercase;
-	font-size: 150px;
-		color: rgba(97, 97, 97, 0.149);
+	font-size: 140px;
+		color: rgba(61, 61, 61, 0.14);
 		font-weight: bold;
 		line-height: 1.2;
 		text-align: center;
@@ -351,7 +356,26 @@ position: relative;
 }
 .about-section-text-descr{
 	font-size: 16px;
+
 }
+.about-section-plus{
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+.about-section-plus-container{
+	display:flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-around;
+	margin-right: 25px;
+
+}
+.about-section-plus-container-img{
+	height: 36px;
+	margin-right: 15px;
+}
+
 .bads{
 	display: flex;
 	flex-direction: column;
@@ -360,7 +384,9 @@ position: relative;
 	margin-top:50px;
 }
 .bads-tiitle{
-	font-size: 40px;
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
+	font-size: 36px;
 	color: rgb(97, 97, 97);
 	font-weight: bold;
 	line-height: 1.2;
@@ -369,9 +395,11 @@ position: relative;
 	margin-bottom: 60px;
 }
 .bads-tiitle:after{
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
 content:'риски';
 text-transform: uppercase;
-font-size: 150px;
+font-size: 140px;
 	color: rgba(97, 97, 97, 0.149);
 	font-weight: bold;
 	line-height: 1.2;
@@ -421,7 +449,9 @@ left:-0.5em;
 }
 
 .services-tittle{
-	font-size: 40px;
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
+	font-size: 36px;
 	color: rgb(97, 97, 97);
 	font-weight: bold;
 	line-height: 1.2;
@@ -431,9 +461,11 @@ left:-0.5em;
 	margin-bottom: 60px;
 }
 .services-tittle:after{
+	font-family: 'Roboto', sans-serif;
+		font-weight: 700;
 content:'услуги';
 text-transform: uppercase;
-font-size: 150px;
+font-size: 140px;
 	color: rgba(97, 97, 97, 0.149);
 	font-weight: bold;
 	line-height: 1.2;
@@ -457,83 +489,130 @@ left:-0.5em;
 }
 .servis-container{
 	display: flex;
-	justify-content: space-around;
+	justify-content: center;
 	flex-wrap: wrap;
 	z-index: 2;
 	position: relative;
 }
 .service-card{
-	width: 45%;
+	width: 265px;
+	height: 370px;
 	display: flex;
-	flex-direction: row;
-	margin: 25px;
-	align-items: flex-start;
+	margin: 15px;
 	justify-content: space-between;
-	position: relative;
+	flex-direction: column;
+	border: 1px solid rgba(204, 204, 204, 0.7);
+	border-radius: 20px;
+	transition: 400ms;
+	overflow: hidden;
+}
+.service-card:hover{
+		box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.16);
+		transform: translateY(-5px);
 }
 .service-img{
-	width: 50%;
-	height: 220px;
+	width: 100%;
+	height: 180px;
+	background-image: url('/img/service-img.png');
+
 }
 .service-image{
 	object-fit: cover;
 	width: 100%;
-	height: 220px;
+	height: 180px;
 }
 .service-text{
-	width: 45%;
-}
-.service-text:before{
-	content: '';
-	width: 50%;
-	margin-left: -25px;
-	height: 100%;
-	top:0;
-	border-left:2px solid rgb(247, 151, 37,0.5);
-	position: absolute;
-	background-image:linear-gradient(to right,	rgba(247, 151, 37,0.12),#ffffff);
-	z-index: -1;
+	margin:10px 20px 26px 20px;
+	display:flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: flex-start;
 }
 .servise-text-descr {
+	margin: 0;
+	margin:10px 0 17px 0px;
   font-size: 16px;
 	line-height: 1.2;
-	margin-bottom: 30px;
 
 }
 
 .servise-link{
+	align-self: center;
 	font-size: 14px;
-
 	text-decoration: none;
 	text-transform: uppercase;
-	color: #616161;
-	background-color: #fff;
-	/* border-bottom: 2px solid #f79725;
-	background-color:rgba(247, 151, 37,0.1);
-	transition: 0.5s; */
-	border: rgba(247, 151, 37,0.7) 2px solid;
-	border-radius: 30px;
+	color: #FFFFFF;
 	padding: 6px 12px 6px 12px;
-	box-shadow: 0px 5px 10px rgba(61, 60, 59, 0.16);
-	transition: all 3s, 0.7s ease-in-out;
+	transition: 400ms ease-in-out;
 	user-select: none;
+		border: 1px solid #f79725;
+		border-radius: 16px;
+		background-color: rgba(247, 142, 19,0.9);
 }
 .servise-link:hover{
-	box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.0);
-	outline: none;
 	cursor: pointer;
+	background-color: #fff;
+	color:#f79725;
+}
+.servise-tiitle{
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.1em;
+	align-self: flex-start;
+}
+.contact-section-tittle{
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	font-size: 36px;
+}
+.contact-section{
+	background-color: #f7f8f8;
+	display: flex; 
+  justify-content: center;
+  background-size: cover; 
+  background-repeat: no-repeat;
+}
+.text-input{
+	margin-bottom: 20px;
+	padding-left:25px;
+	width: 370px;
+	border-radius: 20px;
+	border: #cacaca 1px solid;
+	height: 40px;
+	border-bottom: solid 1px #ffc987;
+	background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #f79725 4%);
+  background-position: -380px 0;
+  background-size: 380px 100%;
+  background-repeat: no-repeat;
+	color: #595959;
+	transition:all 0.5s;
+	animation: 1s;
+}
+.text-input:focus, .text-input:valid {
+  box-shadow: none;
+  outline: none;
+  background-position: 0 0;
 }
 
-
-	/* .servise-link:before {
-		content: '>';
-		position: absolute;
-		top:0px;
-		right: -15px;
-		color: #f79725;
-
-	} */
-	
+.contact-section-content{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 1530px;
+}
+.contact-section-col-left{
+width: 45%;
+}
+.form-section-form-container{
+	display: flex;
+	flex-direction: column;
+	width: 45%;
+}
+.contact-section-col-left-img{
+	width:100%;
+	max-width: 440px;
+}
 
 
 
@@ -557,66 +636,7 @@ left:-0.5em;
 	fill:#fff;
 	z-index: 11;
 }
-.slider_element_img{
-	object-fit: cover;
-	height: 50%;
-	width: 100%;
-	overflow: hidden;
-	overflow-y: hidden;
-	border-radius: 11px 11px 0px 0px;
-}
-.slider_container{
-	flex-wrap: wrap;
-	display: flex;
-	justify-content: center;
-	transition: 1s;
-	
-}
-.element_button{
-	background-color:transparent;
-	margin-top: 20px;
-	padding: 10px 14px 10px 14px;
-	border-radius: 20px;
-	width:120px;
-	border: 1px solid #f79725;
-	outline: none;
-	text-transform: uppercase;
-	color:#595959;
-	cursor: pointer;
-}
-.card-more{
-	align-self: center;
-}
-.element_button:hover{
-	background-color:#fdbe71;
-}
-.element-card_text_container{
-	display:flex;
-	flex-direction: column;
-	padding-right: 20px;
-	padding-left: 20px;
-}
-.slider_element{
-	margin: 10px 30px 10px 30px;
-	display: flex;
-	flex-direction: column;
-} 
 
-.element-card {
-  width: 300px;
-  height: 400px;
-  background-color: #FFFFFF;
-  border-radius: 11px;
-  border: 1px solid rgba(204, 204, 204, 0.7);
-  overflow: visible;
-  margin: 10px;
-	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0);
-	transition: 400ms;
-}
-.element-card:hover {
-	box-shadow: 0px 15px 19px 0px rgba(0, 0, 0, 0.16);
-	transform: translateY(-5px);
-}
 
 
 .social_vicon_svg{
@@ -655,8 +675,8 @@ left:-0.5em;
 	flex-direction: column;
 	align-items: center;
 	position: absolute;
-	right: 200px;
-	bottom: 100px;
+	right: calc(10% - 10px);
+	bottom: 5%;
 }
 .social_iicon, .social_ficon{
 	fill: #fff;
@@ -666,22 +686,6 @@ left:-0.5em;
 .social_iicon{
 	margin-bottom: 6px;
 	margin-top: 8px;
-}
-
-@media (max-width:1200px) and (min-width:1000px){
-	.servise-tiitle {
-		margin-top: 5px!important;
-		margin-bottom: 5px;
-	}
-	.servise-text-descr{
-		margin-top: 5px!important;
-		margin-bottom: 5px;
-	}
-
-	.servise-text-descr {
-		margin-bottom: 20px;
-	
-	}
 }
 
 @media (max-width:1010px){
@@ -785,15 +789,7 @@ left:-0.5em;
 	.about-section-img{
 		max-width:95%;
 	}
-	.service-card{
-		width: 95%;
-		display: flex;
-		flex-direction: row;
-		margin: 25px;
-		align-items: flex-start;
-		justify-content: space-between;
-		position: relative;
-	}
+
 	.menu-btn{
 		display:flex;
 	visibility: visible;
