--- a/css/main.css
+++ b/css/main.css
@@ -700,10 +700,12 @@ body {
 }
 
 .form-label {
+	display: flex;
 	top: 8px;
 	left: 25px;
 	position: absolute;
 	background-color: #fff;
+	border-radius: 15px;
 	transition: 150ms ease-out;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -1153,7 +1155,6 @@ body {
 	}
 	.form-label{
 		font-size: 14px;
-		width: 200px;
 		overflow: hidden;
 	}
 	.contact-section-social{
